force-app/main/default/objects/FEC_NFU_Code__c/FEC_NFU_Code__c.object-meta.xml
<CustomObject>
    <description>Live NFU Code library — synced from FEC_MDM_NFU_Code__c via PushMDMToLive batch</description>
    <label>NFU Code</label>
    <nameField>
        <label>NFU Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NFU Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>