force-app/main/default/objects/FEC_NFU_Code__c/fields/FEC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Code__c</fullName>
    <description>External ID for upsert matching between MDM and Live layers</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>