force-app/main/default/objects/FEC_NFU_Code__c/fields/FEC_Reason_VN__c.field-meta.xml
<CustomField>
    <fullName>FEC_Reason_VN__c</fullName>
    <label>NFU Reason VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>